# stake-bet-analyze

./: .gitignore  AGENTS.md  CLAUDE.md  PRD.md  QWEN.md  README.md  STAKE_INTEGRATION_PLAN.md  post-prune-audit.txt  prune-audit.txt  restore_db.sh  setup.sh
.claude/: settings.local.json
backend/: .env.example  README.md  populate_test_data.py  pump.db.empty_backup_20250916_210852  pyproject.toml  requirements.txt  start_server.py
backend/app/: db.py  main.py
backend/app/core/: config.py  rate_limiter.py
backend/app/engine/: __init__.py  pump.py
backend/app/models/: __init__.py  live_streams.py  runs.py
backend/app/routers/: live_streams.py  runs.py  verify.py
backend/app/routers/streams/: README.md  __init__.py  analytics.py  bookmarks.py  hits.py  ingestion.py  management.py  router.py  snapshots.py
backend/app/schemas/: live_streams.py  runs.py
backend/tests/: test_api_e2e.py  test_live_streams_integration.py  test_live_streams_models.py  test_pump_engine.py  test_refactored_streams.py
backlog/: config.yml
backlog/tasks/: task-1 - Refactor-LiveBetsTable-component-extract-cell-components-and-reduce-file-size.md  task-2 - Clean-up-useEnhancedLiveStreams-hook-remove-commented-code-and-extract-constants.md  task-3 - Refactor-API-types-file-separate-concerns-and-reduce-file-size.md  task-4 - Break-down-massive-hits.py-router-extract-services-and-reduce-complexity.md  task-5 - Refactor-analytics.py-split-large-function-and-extract-calculation-logic.md  task-6 - Create-shared-backend-utilities-consolidate-common-patterns.md
frontend/: .env.example  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Breadcrumb.tsx  ErrorBoundary.tsx  Header.tsx  HitFilters.tsx  LiveStreamsErrorBoundary.tsx  OfflineIndicator.tsx  RunActionsBar.tsx  index.ts
frontend/src/hooks/: useAnalysisBets.ts  useAnalyticsState.ts  useEnhancedLiveStreams.ts  useHitCentricAnalysis.ts  useLiveStream.ts  useLiveStreams.ts  useOfflineDetection.ts  useStreamBetsQuery.ts  useStreamDetail.ts  useStreamTail.ts  useStreamTailUpdater.ts
frontend/src/lib/: analysisEngine.ts  analysisMath.ts  api.ts  errorHandling.ts  errorModel.ts  hooks.ts  pending.ts  queryClient.ts  validation.ts
frontend/src/pages/: LiveStreamDetail.tsx  LiveStreamsList.tsx  NewRun.tsx  (+2 more)
sessions/: sessions-config.json
(+24 files in other folders)
