[project]
name = "backend"
version = "0.1.0"
description = "Backend for stake bet analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "sqlmodel==0.0.21",
    "aiosqlite==0.20.0",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.1",
    "pytest-asyncio==0.23.7",
    "anyio==4.4.0",
    "black==25.1.0",
    "ruff==0.13.0",
    "mypy==1.18.1",
    "pathspec==0.12.1",
    "platformdirs==4.4.0",
    "mypy-extensions==1.1.0",
]
