[project]
name = "backend"
version = "0.1.0"
description = "Backend for stake bet analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "sqlmodel==0.0.21",
    "aiosqlite==0.20.0",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.1",
    "pytest-asyncio==0.23.7",
    "anyio==4.4.0",
    "black==25.1.0",
    "ruff==0.13.0",
    "mypy==1.18.1",
    "pathspec==0.12.1",
    "platformdirs==4.4.0",
    "mypy-extensions==1.1.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"] # assert false

# [tool.mypy]
# python_version = "3.12"
# warn_return_any = false
# warn_unused_configs = true
# disallow_untyped_defs = false
# disallow_incomplete_defs = false
# check_untyped_defs = false
# disallow_untyped_decorators = false
# no_implicit_optional = false
# warn_redundant_casts = true
# warn_unused_ignores = true
# warn_no_return = false
# warn_unreachable = false
# strict_equality = false
#
# [[tool.mypy.overrides]]
# module = "tests.*"
# ignore_errors = true
